# solpay_gateway

./: .gitignore  Anchor.toml  Cargo.toml  et --hard 32a816ddc7a8be52af5e63708ed5e419b838409f:wq  idl.json  package-lock.json  package.json
programs/solpay/: .gitignore  Cargo.toml
programs/solpay/src/: errors.rs  instructions.rs  lib.rs  state.rs
solpay_dapp/: .gitignore  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
solpay_dapp/src/app/: globals.css  layout.tsx
solpay_dapp/src/app/customer/: page.tsx
solpay_dapp/src/app/merchant/: page.tsx
solpay_dapp/src/app/p/[token]/: page.tsx
solpay_dapp/src/components/: app-explorer-link.tsx  app-footer.tsx  app-header.tsx  app-layout.tsx  app-providers.tsx  cluster-dropdown.tsx  share-link-button.tsx
solpay_dapp/src/components/solana/: cluster-provider.tsx  require-wallet.tsx  solana-provider.tsx  use-solana.tsx
solpay_dapp/src/components/ui/: button.tsx  check-dot.tsx  tabs.tsx
solpay_dapp/src/features/account/: account-feature-detail.tsx  account-feature-index.tsx
solpay_dapp/src/features/checkout/: checkout-feature.tsx
solpay_dapp/src/features/customer/: customer-feature.tsx
solpay_dapp/src/features/landing/: landing-page.data.ts  landing-page.tsx
solpay_dapp/src/features/merchant/: merchant-feature.tsx  plan-details-feature.tsx
solpay_dapp/src/idl/: solpay_smartcontract.json
solpay_dapp/src/lib/solana/: connection.ts  constants.ts  index.ts  pdas.ts  program.ts  tokens.ts  transactions.ts  utils.ts
solpay_dapp/src/types/: solpay_smartcontract.ts
tests/: solpay.ts
(+54 files in other folders)
