[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

## Removed a git patch that referenced a non-existent tag on the upstream
## repository. Using the crates.io-published `borsh` crate (or explicit
## overrides in member Cargo.toml files) is recommended. If you intentionally
## need a git version, replace this with a valid `tag = "..."` or a
## `rev = "<commit-hash>"` value.

